--- a/gravitee/docker-compose.yml
+++ b/gravitee/docker-compose.yml
@@ -110,7 +110,8 @@ services:
     depends_on:
       - management-api
     environment:
-      - MGMT_API_URL=http://localhost:8083/management/organizations/DEFAULT/environments/DEFAULT/
+      #- MGMT_API_URL=http://localhost:8083/management/organizations/DEFAULT/environments/DEFAULT/
+      - MGMT_API_URL=http://181.188.147.147:8083/management/organizations/DEFAULT/environments/DEFAULT/
     volumes:
       - /gravitee/apim-management-ui/logs:/var/log/nginx
     networks:
@@ -125,7 +126,8 @@ services:
     depends_on:
       - management-api
     environment:
-      - PORTAL_API_URL=http://localhost:8083/portal/environments/DEFAULT
+      #- PORTAL_API_URL=http://localhost:8083/portal/environments/DEFAULT
+      - PORTAL_API_URL=http://181.188.147.147:8083/portal/environments/DEFAULT
     volumes:
       - /gravitee/apim-portal-ui/logs:/var/log/nginx
     networks:
