--- a/backend_nest/package.json
+++ b/backend_nest/package.json
@@ -37,7 +37,9 @@
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/auto-instrumentations-node": "^0.31.2",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.31.0",
+    "@opentelemetry/exporter-zipkin": "^1.5.0",
     "@opentelemetry/sdk-node": "^0.31.0",
+    "@opentelemetry/sdk-trace-base": "^1.6.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -49,7 +51,10 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "swagger-ui-express": "^4.4.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "zipkin": "^0.22.0",
+    "zipkin-instrumentation-express": "^0.22.0",
+    "zipkin-transport-http": "^0.22.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.8",
