--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,6 @@ services:
     networks:
       - net-cloud
     environment:
-      VITE_BASE_URL_ENDPOINT: api-nest/api
+      VITE_BASE_URL_ENDPOINT: bk-nest/api
     volumes:
       - /usr/src/app/node_modules/
