--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,6 @@ services:
     networks:
       - net-cloud
     environment:
-      VITE_BASE_URL_ENDPOINT: http://181.188.147.147:4000/api
+      URL_ENDPOINT: api-nest
     volumes:
       - /usr/src/app/node_modules/
